# wasi-gfx-runtime

./: .gitignore  .gitmodules  Cargo.toml  EXAMPLES.md  NOTES.md  README.md  TODO.md  rust-toolchain.toml  wit-fetch.sh  wkg-config.toml
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml  run-automated-tests.yml
crates/frame-buffer-wasmtime/: Cargo.toml
crates/frame-buffer-wasmtime/src/: lib.rs
crates/frame-buffer-wasmtime/wit/: world.wit
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/surface-wasmtime/: Cargo.toml
crates/surface-wasmtime/src/: lib.rs  surface.rs  surface_frame_buffer.rs  surface_webgpu.rs
crates/surface-wasmtime/wit/: world.wit
crates/wasi-frame-buffer-wasmtime/: Cargo.toml
crates/wasi-frame-buffer-wasmtime/src/: lib.rs
crates/wasi-graphics-context-wasmtime/: Cargo.toml
crates/wasi-graphics-context-wasmtime/src/: lib.rs
crates/wasi-mini-canvas-wasmtime/: Cargo.toml
crates/wasi-mini-canvas-wasmtime/src/: animation_frame.rs  key_events.rs  lib.rs  pointer_events.rs  winit.rs
crates/wasi-surface-wasmtime/: Cargo.toml
crates/wasi-surface-wasmtime/src/: lib.rs  surface.rs  surface_frame_buffer.rs  winit.rs
crates/wasi-webgpu-wasmtime/: Cargo.toml
crates/wasi-webgpu-wasmtime/src/: enum_conversions.rs  flags_conversions.rs  lib.rs  to_core_conversions.rs  trait_impls.rs  types.rs  wrapper_types.rs
crates/wasi-webgpu-wasmtime/wit/: world.wit
example-apps/rectangle_frame_buffer/: Cargo.toml
example-apps/rectangle_frame_buffer/src/: lib.rs
example-apps/rectangle_simple_buffer/: Cargo.toml
example-apps/rectangle_simple_buffer/src/: lib.rs
example-apps/skybox/: Cargo.toml
example-apps/skybox/src/: lib.rs
example-apps/triangle/: Cargo.toml
example-apps/triangle/src/: lib.rs
example-runtime/: Cargo.toml
example-runtime/src/: animation_frame.rs  frame_buffer.rs  graphics_context.rs  key_events.rs  ltpc.rs  main.rs  mini_canvas.rs  pointer_events.rs  request_animation_frame.rs  simple_buffer.rs  webgpu.rs  webgpu_host.rs
example-runtime/src/webgpu/: enum_conversions.rs  mod.rs  to_core_conversions.rs
examples/: README.md
examples/apps/hello_compute/: Cargo.toml
examples/apps/hello_compute/src/: lib.rs
examples/apps/rectangle_frame_buffer/: Cargo.toml
examples/apps/rectangle_frame_buffer/src/: lib.rs
examples/apps/skybox/: Cargo.toml
examples/apps/skybox/src/: flags.rs  lib.rs
examples/apps/triangle/: Cargo.toml
examples/apps/triangle/src/: lib.rs
examples/runtime/: Cargo.toml
examples/runtime/src/: main.rs
examples/wit/: example.wit
tests/: README.md
tests/webgpu-spec/: Cargo.toml
tests/webgpu-spec/host/: host.rs
tests/webgpu-spec/js-guest/: .gitignore  generate-spec-list.js  package-lock.json  package.json  rollup.config.js  run-single-spec.ts  spec-list.ts  tests.ts
tests/webgpu-spec/js-guest/types/: wit.d.ts
tests/webgpu-spec/js-guest/types/interfaces/: wasi-frame-buffer-frame-buffer.d.ts  wasi-gfx-webgpu-cts-cts-tests.d.ts  wasi-graphics-context-graphics-context.d.ts  wasi-io-poll.d.ts  wasi-surface-surface.d.ts  wasi-webgpu-webgpu.d.ts
tests/webgpu-spec/results/: .gitignore  historical.json  index.html
tests/webgpu-spec/wit/: deps.toml  world.wit
wit/: animation-frame.wit  deps.toml  example.wit  frame-buffer.wit  graphics-context.wit  key-events.wit  mini-canvas.wit  pointer-events.wit  request-animation-frame.wit  simple-buffer.wit  webgpu.wit  world.wit
xtask/: Cargo.toml
xtask/src/: main.rs  run_demo.rs
