[workspace]
resolver = "2"
members = [
    "crates/wasi-frame-buffer-wasmtime",
    "crates/wasi-mini-canvas-wasmtime",
    "crates/wasi-graphics-context-wasmtime",
    "crates/wasi-webgpu-wasmtime",
    "example-apps/rectangle_frame_buffer",
    "example-apps/triangle",
    "example-apps/skybox",
    "example-runtime",
]

[workspace.dependencies]
clap = { version = "4.3.19", features = ["derive"] }
wasmtime = { version = "17.0", features = ['component-model'] }
wasmtime-wasi = "17.0"
anyhow = "1.0.72"
winit = { version = "0.28", features = [ "android-native-activity" ] }
wgpu-core = "0.18"
wgpu-types = "0.18"
version = "0.18"
raw-window-handle = "0.5"
async-trait = "0.1.74"
rand = "0.8.5"
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
softbuffer = "0.3.0"
env_logger = "0.11.0"
log = "0.4.8"
async-broadcast = "0.7.0"
oneshot = "0.1.3"
wit-bindgen = "0.19"
callback-future = "0.1.0"
