[workspace]
resolver = "2"
members = [
    "crates/wasi-frame-buffer-wasmtime",
    "crates/wasi-surface-wasmtime",
    "crates/wasi-graphics-context-wasmtime",
    "crates/wasi-webgpu-wasmtime",
    "examples/apps/rectangle_frame_buffer",
    "examples/apps/triangle",
    "examples/apps/skybox",
    "examples/apps/hello_compute",
    "examples/runtime",
]

[workspace.dependencies]
clap = { version = "4.3", features = ["derive"] }
wasmtime = { version = "31.0", features = ['component-model'] }
wasmtime-wasi = "31.0"
anyhow = "1.0"
winit = { version = "0.30", features = [ "android-native-activity" ] }
wgpu-core = "27"
wgpu-types = "27"
raw-window-handle = "0.6"
async-trait = "0.1"
rand = "0.9"
futures = "0.3"
tokio = { version = "1.44", features = ["full"] }
softbuffer = "0.4"
env_logger = "0.11"
log = "0.4"
async-broadcast = "0.7"
oneshot = "0.1"
wit-bindgen = "0.41"
callback-future = "0.1"
bytemuck = "1"
