[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/wasi-webgpu-wasmtime",
    "crates/frame-buffer-wasmtime",
    "crates/surface-wasmtime",
    "examples/apps/rectangle_frame_buffer",
    "examples/apps/triangle",
    "examples/apps/skybox",
    "examples/apps/hello_compute",
    "examples/runtime",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasi-gfx/wasi-gfx-runtime"

[workspace.dependencies]
shared = { path = "crates/shared", version = "0.2.0", package = "wasi-gfx-runtime-shared" }
frame-buffer-wasmtime = { path = "crates/frame-buffer-wasmtime", version = "0.2.0" }
wasi-webgpu-wasmtime = { path = "crates/wasi-webgpu-wasmtime", version = "0.2.0" }

clap = { version = "4.3", features = ["derive"] }
wasmtime = "47"
wasmtime-wasi = "47"
anyhow = "1.0"
winit = { version = "0.30", features = [ "android-native-activity" ] }
wgpu-core = "29"
wgpu-types = "29"
raw-window-handle = "0.6"
async-trait = "0.1"
rand = "0.9"
futures = "0.3"
futures-lite = "2"
tokio = { version = "1.44", features = ["full"] }
softbuffer = "0.4"
env_logger = "0.11"
log = "0.4"
async-broadcast = "0.7"
oneshot = "0.1"
wit-bindgen = { version = "0.57", features = ["futures-stream"] }
callback-future = "0.1"
bytemuck = "1"
