[package]
name = "wasi-gfx-runtime-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared internals for the wasi-gfx wasmtime host crates"

[dependencies]
wasmtime.workspace = true
async-broadcast.workspace = true
futures.workspace = true
