[package]
name = "surface-wasmtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
surface-webgpu = ["wasi-webgpu-wasmtime"]
surface-frame-buffer = ["frame-buffer-wasmtime", "softbuffer"]

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
raw-window-handle.workspace = true
async-broadcast.workspace = true
oneshot.workspace = true
winit = { workspace = true, optional = true }
futures.workspace = true
wasi-webgpu-wasmtime = { path = "../wasi-webgpu-wasmtime", optional = true }
frame-buffer-wasmtime = { path = "../frame-buffer-wasmtime", optional = true }
shared = { path = "../shared" }
softbuffer = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["extern_crate_std"] }
