[package]
name = "wasi-frame-buffer-wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-io.workspace = true
raw-window-handle.workspace = true
softbuffer.workspace = true
wasi-graphics-context-wasmtime = { path = "../wasi-graphics-context-wasmtime" }
bytemuck.workspace = true
