[package]
name = "wasi-mini-canvas-wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
raw-window-handle.workspace = true
async-broadcast.workspace = true
oneshot.workspace = true
async-trait.workspace = true
winit = { workspace = true, optional = true }
futures.workspace = true
wasi-graphics-context-wasmtime = { path = "../wasi-graphics-context-wasmtime" }
