[package]
name = "wasi-surface-wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-io.workspace = true
raw-window-handle.workspace = true
async-broadcast.workspace = true
oneshot.workspace = true
async-trait.workspace = true
winit = { workspace = true, optional = true }
futures.workspace = true
wasi-graphics-context-wasmtime = { path = "../wasi-graphics-context-wasmtime" }
