[package]
name = "wasi-webgpu-wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-io.workspace = true
raw-window-handle.workspace = true
wgpu-core.workspace = true
wgpu-types.workspace = true
wasi-graphics-context-wasmtime = { path = "../wasi-graphics-context-wasmtime" }
callback-future.workspace = true
futures.workspace = true
shared = { path = "../shared" }
async-broadcast.workspace = true
log.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies.wgpu-core]
workspace = true
features = ["wgsl", "vulkan", "noop"]

[target.'cfg(target_os = "windows")'.dependencies.wgpu-core]
workspace = true
features = ["wgsl", "dx12", "noop"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgpu-core]
workspace = true
features = ["wgsl", "metal", "noop"]

[target.'cfg(all(not(target_os = "linux"), not(target_os = "android"), not(target_os = "windows"), not(target_os = "macos"), not(target_os = "ios")))'.dependencies.wgpu-core]
workspace = true
features = ["wgsl", "gles", "noop"]
