[package]
name = "skybox"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
futures.workspace = true
futures-lite.workspace = true
bytemuck = { workspace = true, features=["derive"] }
log.workspace = true
glam = "0.25.0"
ktx2 = "0.3.0"
obj = "0.10.2"
